--- a/app/views/finance/_year_report.html.erb
+++ b/app/views/finance/_year_report.html.erb
@@ -1,9 +1,9 @@
 
 <div id="fees-table">
   <div class="fees-th">
-    <div class="fees-table-description">Description</div>
-    <div class="fees-table-expenses">Expenses</div>
-    <div class="fees-table-income">Income</div>
+    <div class="fees-table-description"><%= t('layouts.default.description') %></div>
+    <div class="fees-table-expenses"><%= t('expense_create.expense') %></div>
+    <div class="fees-table-income"><%= t('student.admission2.income') %></div>
   </div>
 
   <%income_total = 0%>
@@ -27,7 +27,7 @@
   <% end %>
 
   <div class="fees-tr">
-    <div class="fees-table-description"><%= link_to "Salary Account" , :action => 'salary_department_year' , :date => @academic_year%> </div>
+    <div class="fees-table-description"><%= link_to t('year_report.salary_account') , :action => 'salary_department_year' , :date => @academic_year%> </div>
     <div class="fees-table-expenses"> <%=expenses_total%> </div>
   </div>
 
@@ -42,12 +42,12 @@
   <%end%>
 
   <div class="fees-tr">
-    <div class="fees-table-description"><%= link_to "Direct Expenses" , :action => 'direct_expenses_year',:date => @academic_year%> </div>
+    <div class="fees-table-description"><%= link_to t('year_report.direct_expense') , :action => 'direct_expenses_year',:date => @academic_year%> </div>
     <div class="fees-table-expenses"> <%=direct_expenses%> </div>
   </div>
 
   <div class="fees-tr">
-    <div class="fees-table-description"><%= link_to "Direct Income" , :action => 'direct_income_year',:date => @academic_year%> </div>
+    <div class="fees-table-description"><%= link_to t('year_report.direct_income') , :action => 'direct_income_year',:date => @academic_year%> </div>
     <div class="fees-table-income"> <%=direct_income%> </div>
   </div>
 
@@ -71,7 +71,7 @@
   <%donations_total=donations_income-donations_expenses %>
 
   <div class="fees-tr">
-    <div class="fees-table-description"><%= link_to "Donations" , :action => 'donations_report_year',:date => @academic_year%> </div>
+    <div class="fees-table-description"><%= link_to t('index.donations') , :action => 'donations_report_year',:date => @academic_year%> </div>
     <div class="fees-table-income"> <%=donations_total%></div>
   </div>
 
@@ -81,17 +81,17 @@
   <%end%>
 
   <div class="fees-tr">
-    <div class="fees-table-description"><%= link_to "Fees" , :action => 'fees_report_year' , :date => @academic_year%> </div>
+    <div class="fees-table-description"><%= link_to t('student.profile.fees') , :action => 'fees_report_year' , :date => @academic_year%> </div>
     <div class="fees-table-income"> <%=fees_total%> </div>
   </div>
 
   <div class="fees-th">
-    <div class="fees-table-description">Total</div>
+    <div class="fees-table-description"><%= t('attendance_reports.index.total') %></div>
     <div class="fees-table-expenses"><%=expenses_total%></div>
     <div class="fees-table-income"><%=income_total%></div>
   </div>
   <div class ="fees-th-grandtotal">
-    <div class="fees-table-description">Grand Total</div>
+    <div class="fees-table-description"><%= t('year_report.grand_total') %></div>
     <div class="fees-table-total"><%=income_total-expenses_total%></div>
   </div>
 </div>
