--- a/app/views/finance/additional_particulars.html.erb
+++ b/app/views/finance/additional_particulars.html.erb
@@ -1,32 +1,32 @@
 <div id="content-header">
     <img src="/images/show_finance.png" alt="" />
-  <h1>Fees</h1>
-  <h3>Additional Fees</h3>
+    <h1><%= t('index.fes') %></h1>
+    <h3><%= t('additional_fees.additional_fees.') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="page-yield">
   <div id="particulars" >
-<div class="name">Category Name</div><div class="val"><span>:</span><%= @additional_category.name %></div>
- <div class="name">Description</div><div class="val"><span>:</span><%= @additional_category.description %></div>
+    <div class="name"><%= t('additional_fees.category_name') %></div><div class="val"><span>:</span><%= @additional_category.name %></div>
+    <div class="name"><%= t('index.description') %></div><div class="val"><span>:</span><%= @additional_category.description %></div>
 
   <% unless @additional_category.batch.nil? %>
-  <div class="name">Course</div><div class="val"><span>:</span><%= @additional_category.batch.full_name %></div>
+    <div class="name"><%= t('layouts.default.course') %></div><div class="val"><span>:</span><%= @additional_category.batch.full_name %></div>
     <% else %>
-  <div class="name">Course</div><div class="val"><span>:</span>NIL</div>
+  <div class="name"><%= t('layouts.default.course') %></div><div class="val"><span>:</span>NIL</div>
   <% end %>
 <br/>
 
 <% unless @particulars.empty? %>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
     <tr class="tr-head">
-      <td>Sl no.</td>
-      <td>Particulars</td>
-      <td>Student Category</td>
-      <td>Admission No</td>
-      <td>Amount (<%= currency %>)</td>
-      <td>Created Date</td>
+      <td><%= t('layouts.default.sl_no') %></td>
+      <td><%= t('master_fees.particulars') %></td>
+      <td><%= t('fees_submission_index.student_category') %></td>
+      <td><%= t('student.admission1.admission_number') %></td>
+      <td><%= t('layouts.default.amount') %> (<%= currency %>)</td>
+      <td><%= t('index.created_date') %></td>
       <td></td>
     </tr>
     <tr class="tr-blank"></tr>
@@ -48,11 +48,11 @@
         <td class="col-3"><%= fees.created_at.strftime("%m-%d-%Y") %></td>
         <td class="col-1">
           <%  unless @additional_category.check_fee_collection_for_additional_fees == false %>
-            <span class="small"> <%= link_to_remote 'Delete', :confirm=>"Delete this particular ?",:url => { :action => 'add_particulars_delete',:id => fees.id} %></span>
+            <span class="small"> <%= link_to_remote "#{t('layouts.default.delete')}", :confirm=>"Delete this particular ?",:url => { :action => 'add_particulars_delete',:id => fees.id} %></span>
           <% else %>
-            <span class="small-strike">delete</span>
+            <span class="small-strike"><%= t('layouts.default.delete') %></span>
           <% end %>
-          <span class="small"> <%= link_to_remote 'Edit', :url => { :action => 'add_particulars_edit',:id => fees.id} %></span>
+          <span class="small"> <%= link_to_remote "#{t('layouts.default.edit')}", :url => { :action => 'add_particulars_edit',:id => fees.id} %></span>
         </td>
       </tr>
     <% end %>
@@ -63,12 +63,12 @@
 <% else %>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
     <tr class="tr-head">
-      <td>No Categories to display!</td>
+      <td><%= t('additional_fees.no_categories_to_display') %>!</td>
     </tr>
   </table>
 
 <% end%>
-<%= link_to 'Back',{:action => 'additional_fees_list'},:class=>'user_button' %>
+<%= link_to "#{t('layouts.default.back')}",{:action => 'additional_fees_list'},:class=>'user_button' %>
  </div>
 </div>
  <div id="modal-box" style="display:none;"></div>
