--- a/app/views/finance/each_asset_view.html.erb
+++ b/app/views/finance/each_asset_view.html.erb
@@ -1,6 +1,6 @@
 <div id="content-header">
   <img src="/images/show_finance.png" alt="" />
-  <h1>Asset View</h1>
+  <h1><%= t('asset.asset_view') %></h1>
   <h3><%= @asset.title %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
@@ -10,11 +10,11 @@
 
 
   <div id="asset-body">
-    <div id="asset-title">Asset Name : <%= @asset.title%></div>
+    <div id="asset-title"><%= t('asset.asset_name') %> : <%= @asset.title%></div>
     <div id="asset-description"><%= @asset.description %></div>
     <br/>
-    <div id="asset-amt">Amount : <%=  @currency_type + " "%><%= @asset.amount%></div>
-    <div id="asset-date">Created At : <%= @asset.created_at.strftime("%A, %d %B, %Y") %></div>
+    <div id="asset-amt"><%= t('layouts.default.amount') %> : <%=  @currency_type + " "%><%= @asset.amount%></div>
+    <div id="asset-date"><%= t('view_asset.created_at') %> : <%= @asset.created_at.strftime("%A, %d %B, %Y") %></div>
   </div>
 
 
