--- a/app/views/finance/each_liability_view.html.erb
+++ b/app/views/finance/each_liability_view.html.erb
@@ -1,6 +1,6 @@
 <div id="content-header">
   <img src="/images/show_finance.png" alt="" />
-  <h1>Liability View</h1>
+  <h1><%= t('liability.liability_view') %></h1>
   <h3><%= @liability.title %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
