--- a/app/views/finance/fees_report.html.erb
+++ b/app/views/finance/fees_report.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
   <img src="/images/show_finance.png" />
-  <h1>Finance Transactions</h1>
-  <h3>Fees Report</h3>
+  <h1><%= t('transactions.finance_transactions')%></h1>
+  <h3><%= t('yaer_report.fees_report') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
