--- a/app/views/finance/fees_student_structure_search_logic.html.erb
+++ b/app/views/finance/fees_student_structure_search_logic.html.erb
@@ -1,13 +1,13 @@
 
 <% if @students_result.nil? %>
-  <div id="no_result">No users found</div>
+  <div id="no_result"><%= t('student.index.no_users_found') %></div>
 <%else%>
   <% @students_result.each do |t| %>
     <div id="ajax_result">
       <% link_value = t.full_name %>
       <%= link_to link_value, :controller => "finance", :action => "fees_structure_dates", :id => t.id %><br/>
-      <small>Batch: <%= t.batch.full_name%></small>
-      <small><br/>Adm No.<%= t.admission_no %></small> <%= @st.to_s %>
+      <small><%= t('layouts.default.batch') %>: <%= t.batch.full_name%></small>
+      <small><br/><%= t('layouts.default.adm_no.') %><%= t.admission_no %></small> <%= @st.to_s %>
     </div>
   <%end%>
 <%end%>
