--- a/app/views/finance/_transaction_edit_form.html.erb
+++ b/app/views/finance/_transaction_edit_form.html.erb
@@ -2,28 +2,28 @@
   <div id="create_user_form">
 
     <div class="label-field-pair">
-      <label for="title">Title </label>
+      <label for="title"><%= t('news.all.title') %> </label>
       <div class="text-field-bg"><%= form.text_field :title %> </div>
     </div>
     <div class="label-field-pair">
-      <label for="description">Description </label>
+      <label for="description"><%= t('layouts.default.description') %></label>
       <div class="text-field-bg"><%= form.text_field :description %> </div>
     </div>
 
 
     <div class="label-field-pair">
-      <label for="amount">Amount</label>
+      <label for="amount"><%= t('layouts.default.amount') %></label>
       <div class="text-field-bg"><%= form.text_field :amount %> </div>
     </div>
     <div class="label-field-pair">
-      <label for="amount">Date</label>
-      <div class="text-field-bg"><%= calendar_date_select_tag 'transaction[transaction_date]', Date.today, :year_range => 5.years.ago..0.years.ago %></div>
+      <label for="amount"><%= t('layouts.default.date') %></label>
+      <div class="text-field-bg"><%= calendar_date_select_tag transaction[transaction_date], I18n.localize(Date.today, :format=>:default), :year_range => 5.years.ago..0.years.ago %></div>
     </div>
     <div class="label-field-pair">
-      <label for="category">Category</label>
+      <label for="category"><%= t('index.category') %></label>
       <div class="text-input-bg"><%= select :transaction, :category_id,@categories.map { |c| [c.name, c.id] }, :selected => @transaction.category_id %></div>
     </div>
 
-    <%=  submit_tag "► Save",:class=>'submit_button' %>
+    <%=  submit_tag "► #{t('layouts.default.save')}",:class=>'submit_button' %>
   </div>
 <% end %>
