--- a/app/views/finance/_transaction_trigger_create_form.html.erb
+++ b/app/views/finance/_transaction_trigger_create_form.html.erb
@@ -1,30 +1,30 @@
-<label class="head_label">Create Automatic Transaction<span></span></label>
+<label class="head_label"><%= t('automatic_transactions.create_automatic_transaction') %><span></span></label>
 
 <% form_remote_for :transaction_trigger,
     :url => {:action => 'transaction_trigger_create'} do |form| %>
 
-   <div id="form-errors"></div>
+
    <div class="label-field-pair">
-    <div class="label-container"><%= form.label :category_id %></div>
+    <div class="label-container"><label><%= t('layouts.default.category') %></label></div>
     <div class="input-container"><%= form.select :finance_category_id, @categories.map { |c| [c.name, c.id] } %></div>
    </div>
 
 <div class="label-field-pair">
-    <div class="label-container"><%= form.label :percentage %></div>
+    <div class="label-container"><label><%= t('payroll.add_category.percentage') %></label></div>
     <div class="input-container"><%= form.text_field :percentage %></div>
    </div>
 
 <div class="label-field-pair">
-     <div class="label-container"><%= form.label :title %></div>
+  <div class="label-container"><label><%= t('news.all.title') %></label></div>
     <div class="input-container"><%= form.text_field :title %></div>
    </div>
 
 <div class="label-field-pair">
-    <div class="label-container"> <%= form.label :description %></div>
+    <div class="label-container"> <label><%= t('layouts.default.description') %></label></div>
     <div class="input-container"> <%= form.text_field :description %></div>
    </div>
 
  <div id="modelbox-submit">
-          <%=  submit_tag "► Save",:class=>'submit_button' %>
+          <%=  submit_tag "► #{t('weekday.index.save')}",:class=>'submit_button' %>
   </div>
 <% end %>
