--- a/app/views/finance/_transaction_trigger_edit_form.html.erb
+++ b/app/views/finance/_transaction_trigger_edit_form.html.erb
@@ -1,4 +1,4 @@
-<label class="head_label">Edit Automatic Transaction<span></span></label>
+<label class="head_label"><%= t('index.edit_automatic_transaction') %><span></span></label>
 
 <% form_remote_for :transaction_trigger,
     :url => {:action => 'transaction_trigger_update',:id=>@transaction_trigger.id},
@@ -6,26 +6,26 @@
 
 
    <div class="label-field-pair">
-    <div class="label-container"><%= form.label :category_id %></div>
+    <div class="label-container"><%= form.label :"#{t('index.category')}" %></div>
     <div class="input-container"><%= form.select :finance_category_id, @categories.map { |c| [c.name, c.id] } %></div>
    </div>
 
 <div class="label-field-pair">
-    <div class="label-container"><%= form.label :percentage %></div>
+    <div class="label-container"><%= form.label :"#{t('payroll.add_category.percentage')}" %></div>
     <div class="input-container"><%= form.text_field :percentage %></div>
    </div>
 
 <div class="label-field-pair">
-     <div class="label-container"><%= form.label :title %></div>
+     <div class="label-container"><%= form.label :"#{t('index.title')}" %></div>
     <div class="input-container"><%= form.text_field :title %></div>
    </div>
 
 <div class="label-field-pair">
-    <div class="label-container"> <%= form.label :description %></div>
+    <div class="label-container"> <%= form.label :"#{t('index.description')}"%></div>
     <div class="input-container"> <%= form.text_field :description %></div>
    </div>
 
  <div id="modelbox-submit">
-          <%=  submit_tag "► Save",:class=>'submit_button' %>
+          <%=  submit_tag "► #{t('layouts.default.save')}",:class=>'submit_button' %>
   </div>
 <% end %>
