--- a/app/views/finance/_update_particulars.erb
+++ b/app/views/finance/_update_particulars.erb
@@ -1,5 +1,5 @@
 <div class="text_field_bg">
   <div id="particulars">
     <%= select :element, :parent_id,@fee_particulars.map{|item| [item.name ,item.id]} ,
-      :prompt => "Select Fees Particulars" %></div>
+      :prompt => "#{t('select_fees_particulars')}" %></div>
 </div>
