--- a/app/views/finance/_view_payslip.html.erb
+++ b/app/views/finance/_view_payslip.html.erb
@@ -1,9 +1,9 @@
 <ul class="item-list">
   <!-- <li class="heading"><%= @employee.full_name %></li> -->
-  <li class="heading">Payslip generated on <%= @salary_date %></li>
+  <li class="heading"><%= t('employee.department_payslip.payslip_generated_on') %> <%= @salary_date %></li>
 </ul>
 <ul class="item-list">
-  <li class="heading1">Salary</li>
+  <li class="heading1"><%= t('employee.profile.salary') %></li>
   <% @monthly_payslips.each do |mp| %>
     <% category = PayrollCategory.find(mp.payroll_category_id) %>
     <% @emp = Employee.find(mp.employee_id) %>
@@ -28,13 +28,13 @@
     <% end %>
   <% end %>
   <li class="list<%=cycle('odd', 'even')%>">
-    <div class="item-name"><b>Total Salary </b></div>
+    <div class="item-name"><b><%= t('employee.department_payslip.total_salary') %> </b></div>
     <div class="item-edit"><b><span class="currency-type"><%= @currency_type %></span> <%=@net_non_deductionable_amount  %></b></div>
   </li>
 </ul>
 
 <ul class="item-list">
-  <li class="heading1">Deductions</li>
+  <li class="heading1"><%= t('employee.department_payslip.deductions') %></li>
   <% @monthly_payslips.each do |mp| %>
     <% category = PayrollCategory.find(mp.payroll_category_id) %>
     <% @emp = Employee.find(mp.employee_id) %>
@@ -57,15 +57,15 @@
     <% end %>
   <% end %>
   <li class="list<%=cycle('odd', 'even')%>">
-    <div class="item-name"><b>Total Deductions </b></div>
+    <div class="item-name"><b><%= t('payslip_index.total_deductions') %> </b></div>
     <div class="item-edit"><span class="currency-type"><b><%= @currency_type %></b></span> <b><%=@net_deductionable_amount %></b></div>
   </li>
 </ul>
 
 <ul class="item-list">
-  <li class="heading1">Total</li>
+  <li class="heading1"><%= t('employee.department_payslip.total') %></li>
   <li class="listeven">
-    <div class="item-name"><b>Net Salary </b></div>
+    <div class="item-name"><b><%= t('employee.department_payslip.net_salary') %> </b></div>
     <div class="item-edit"><span class="currency-type"><b><%= @currency_type %></b></span><b> <%=@net_amount%></b></div>
   </li>
 </ul>
@@ -78,21 +78,21 @@
 <%# end %>
 
 <div class="pdf-report">
-  <%= link_to "PDF report", :controller=>"employee", :action=>"employee_individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date, :format=>'pdf', :target=>"_blank" %>
+  <%= link_to t('layouts.default.pdf_report'), :controller=>"employee", :action=>"employee_individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date, :format=>'pdf', :target=>"_blank" %>
 </div>
 
 <% if @approve == false and @rejected == false%>
   <div id="submit-button" class ="approve">
-    <%= link_to "Approve", {:controller=>"finance", :action=>"employee_payslip_approve",:id =>@employee.id,:id2 => @salary_date } %>
+    <%= link_to t('employee.hr.approve'), {:controller=>"finance", :action=>"employee_payslip_approve",:id =>@employee.id,:id2 => @salary_date } %>
   </div>
   <div id="submit-button" class ="approve">
-    <%= link_to_remote "Reject",:url=>{:controller => "finance", :action => "employee_payslip_reject_form", :id=> @emp.id, :id2=>@salary_date}, :confirm=>"Are you sure?" %>
+    <%= link_to_remote "#{t('layouts.default.reject')}",:url=>{:controller => "finance", :action => "employee_payslip_reject_form", :id=> @emp.id, :id2=>@salary_date}, :confirm=>"Are you sure?" %>
   </div>
   
 <% else %>
   <div id="submit-button" class ="approved">
-    <%= "Payslip approved!" if @approve == true %>
-    <%= "Payslip Rejected!" if @rejected == true %>
+    <%= "#{t('finance_payslip_index.payslip_approved')}" if @approve == true %>
+    <%= "#{t('finance_payslip_index.payslip_rejected')}" if @rejected == true %>
   </div>
 
 <% end %>
