--- a/app/views/finance/additional_fees.html.erb
+++ b/app/views/finance/additional_fees.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
    <img src="/images/show_finance.png" alt="" />
-  <h1>Fees</h1>
-  <h3>Additional Fees</h3>
+   <h1><%= t('index.fees') %></h1>
+   <h3><%= t('additional') %> <%= t('index.fees') %></h3>
   <div id="app-back-button">
    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -10,13 +10,13 @@
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div class="box">
   <div class="link-box">
-    <div class="link-heading"><%= link_to "Create", :action => "additional_fees_create_form" %></div>
-    <div class="link-descr">Creates Additional fees </div>
+    <div class="link-heading"><%= link_to "#{t('layouts.default.create')}", :action => "additional_fees_create_form" %></div>
+    <div class="link-descr"><%= t('layouts.default.create') %> <%= t('additional') %> <%= t('index.fees') %> </div>
   </div>
 
   <div class="link-box">
-    <div class="link-heading"><%= link_to "View", :action => "additional_fees_list" %></div>
-    <div class="link-descr">View Additional Fees</div>
+    <div class="link-heading"><%= link_to "#{t('timetable.index.view')}", :action => "additional_fees_list" %></div>
+    <div class="link-descr"><%= t('timetable.index.view') %> <%= t('additional') %> <%= t('index.fees') %></div>
   </div>
 
 </div>
