--- a/app/views/finance/additional_fees_create_form.html.erb
+++ b/app/views/finance/additional_fees_create_form.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
   <img src="/images/show_finance.png" alt="" />
-  <h1>Additional Fees</h1>
-  <h3>Create Additional Fees </h3>
+  <h1><%= t('additional_fees.additional_fees') %></h1>
+  <h3><%= t('additional_fees.create_additional_fees') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -13,19 +13,19 @@
   <% form_for(:additional_fees,:url => {:action=> 'additional_fees_create'}) do |form| %>
 
      <div class="label-field-pair">
-    <div class="label-container"><label>Name <span class="necessary-field">*</span> :</label> </div>
+    <div class="label-container"><label><%= t('layouts.default.name') %> <span class="necessary-field">*</span> :</label> </div>
     <div class="input-container"><%= form.text_field :name %></div>
    </div>
        <div class="label-field-pair">
-    <div class="label-container"><label>Description: </label> </div>
+    <div class="label-container"><label><%= t('layouts.default.description') %>: </label> </div>
     <div class="input-container"><%= form.text_field :description %></div>
    </div>
        <div class="label-field-pair">
-    <div class="label-container"><label>Batch <span class="necessary-field">*</span>: </label></div>
+    <div class="label-container"><label><%= t('layouts.default.batch') %> : </label></div>
     <div class="input-container"><%= form.select :batch_id, @batches.map { |c| [c.full_name, c.id] },:prompt => "Select Batch"  %></div>
    </div>
        <div class="label-field-pair">
-    <div class="label-container"><label>Start date <span class="necessary-field">*</span>:</label> </div>
+    <div class="label-container"><label><%= t('layouts.default.start_date') %> <span class="necessary-field">*</span> :</label> </div>
     <div class="input-container"><%= calendar_date_select_tag 'additional_fees[start_date]', Date.today %></div>
    </div>
        <div class="label-field-pair">
@@ -33,11 +33,11 @@
     <div class="input-container"><%= calendar_date_select_tag 'additional_fees[end_date]', Date.today %></div>
    </div>
        <div class="label-field-pair">
-    <div class="label-container"><label>Due date <span class="necessary-field">*</span>:</label> </div>
+    <div class="label-container"><label><%= t('layouts.default.due_date') %> <span class="necessary-field">*</span> :</label> </div>
     <div class="input-container"><%= calendar_date_select_tag 'additional_fees[due_date]', Date.today %></div>
    </div>
 
-    <%=  submit_tag "► Save",:class=>'submit_button' %>
+    <%=  submit_tag "► #{t('layouts.default.save')}",:class=>'submit_button' %>
   <% end %>
 
 </div>
