--- a/app/views/finance/additional_fees_list.html.erb
+++ b/app/views/finance/additional_fees_list.html.erb
@@ -1,16 +1,16 @@
 <div id="content-header">
     <img src="/images/show_finance.png" alt="" />
-  <h1>Fees</h1>
-  <h3>Additional Fees</h3>
+  <h1><%= t('index.fees') %></h1>
+  <h3><%= t('additional_fees.additional_fees') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="page-yield">
   <div id="batch">
-    <div class="label-field-pair"><label>Select a batch : </label>
+    <div class="label-field-pair"><label><%= t('layouts.default.select_a_batch') %> : </label>
       <div class="text-input-bg"> <%= select("id",:id,@batchs.map { |c| [c.full_name, c.id] },
-        {:prompt => "Select a batch"},
+        {:prompt => "#{t('layouts.default.select_a_batch')}"},
         {:onChange => "#{remote_function(:url => {:action => "show_additional_fees_list"}, :with => "'id='+value")}"})%> </div>
   </div>
   </div>
