--- a/app/views/finance/approve_monthly_payslip.html.erb
+++ b/app/views/finance/approve_monthly_payslip.html.erb
@@ -10,8 +10,8 @@ $jq(document).ready(function() {
 
 <div id="content-header">
    <img src="/images/show_finance.png" alt="" />
-  <h1>Payslip</h1>
-  <h3>Approve Payslip</h3>
+  <h1><%= t('employee.profile.payslip') %></h1>
+  <h3><%= t('approve_payslip') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -19,9 +19,9 @@ $jq(document).ready(function() {
 <div id="page-yield">
   <div class="box">
     <div class="label-field-pair">
-    <label for="salary_date">Salary Month</label>
+      <label for="salary_date"><%= t('salary_month') %></label>
     <div class="text-input-bg"><%= select :one_click_payslip, :salary_date, @salary_dates.map {|c| [c.salary_date.strftime("%B %Y"),c.salary_date.strftime("%Y-%m-%d")]},
-                                              {:prompt => 'Select a month'},
+                                              {:prompt => t('attendance_reports.index.select_a_month')},
                                               {:onChange => "#{remote_function(:url => {:action=> "one_click_approve"},
                                               :with => "'salary_date='+value")}"} %></div>
     </div>
