--- a/app/views/finance/asset_liability.html.erb
+++ b/app/views/finance/asset_liability.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
    <img src="/images/show_finance.png" alt="" />
-  <h1>Finance</h1>
-  <h3>Asset Liability Management</h3>
+   <h1><%= t('finance.index.finance') %></h1>
+   <h3><%= t('asset_liability_management') %></h3>
   <div id="app-back-button">
    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -10,14 +10,14 @@
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div class="box">
   <div class="link-box">
-    <div class="link-heading"><%= link_to "Asset", :action => "asset" %> </div>
-    <div class="link-descr">Manages Asset</div>
+    <div class="link-heading"><%= link_to t('asset'), :action => "asset" %> </div>
+    <div class="link-descr"><%= t('manages_asset') %></div>
   </div>
 
   <div class="link-box">
-    <div class="link-heading"><%= link_to "Liability", :action => "liability" %> </div>
-    <div class="link-descr">Manages Liability</div>
+    <div class="link-heading"><%= link_to t('liability'), :action => "liability" %> </div>
+    <div class="link-descr"><%= t('manages_liability') %></div>
   </div>
-    
+
 </div>
 </div>
