--- a/app/views/finance/create_liability.html.erb
+++ b/app/views/finance/create_liability.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
   <img src="/images/examination/index/page_logo.jpg" alt="" />
-  <h1>Asset-Liability Management</h1>
-  <h3>Liability Form</h3>
+  <h1><%= t('asset.asset_liability_Management') %></h1>
+  <h3><%= t('asset.liability_form') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -9,7 +9,7 @@
 <div id="page-yield">
 
   <div class="link-heading">
-    <%= link_to_function("create") { |page|
+    <%= link_to_function("#{t('layouts.default.create')}") { |page|
       page.replace_html 'modal-box', :partial => 'create_liability_form'
       page << "Modalbox.show($('modal-box'), {title: 'Create new Liability', width: 500});"
     } %>
