--- a/app/views/finance/donation_receipt.rhtml
+++ b/app/views/finance/donation_receipt.rhtml
@@ -1,7 +1,7 @@
 <div id="content-header">
   <img src="/images/show_finance.png" alt="" />
-  <h1>Donations</h1>
-  <h3>Donation receipt</h3>
+  <h1><%= t('index.donations') %></h1>
+  <h3><%= t('index.donation_receipt') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -11,18 +11,18 @@
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div class="box">
 
-    <div class="field1">Donor:</div>
+    <div class="field1"><%= t('donation.donor') %>:</div>
     <div class="val"> <%= @donation.donor %></div>
 
-    <div class="field1">Description: </div>
+    <div class="field1"><%= t('index.description') %>: </div>
     <div class="val"><%= @donation.description %></div>
 
-    <div class="field1">Amount: </div>
+    <div class="field1"><%= t('layouts.default.amount') %>: </div>
     <div class="val"><%= @donation.amount %></div>
-    <div class="field1">Transaction ID: </div>
+    <div class="field1"><%= t('donation.transaction_id') %>: </div>
     <div class="val"><%= @donation.transaction_id unless @donation.transaction_id.nil? %></div>
     <div class="submit_button">
-      <%= link_to "► Print Receipt", {:action => 'donation_receipt_pdf', :id => @donation.id}, :format => 'pdf', :target => '_blank' %>
+      <%= link_to "► #{t('fees_submission_index.print_receipt')}", {:action => 'donation_receipt_pdf', :id => @donation.id}, :format => 'pdf', :target => '_blank' %>
     </div>
   </div>
 </div>
