--- a/app/views/finance/expense_list.html.erb
+++ b/app/views/finance/expense_list.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
   <img src="/images/show_finance.png" alt="" />
-  <h1>Expenses</h1>
-  <h3>Expenses List</h3>
+  <h1><%= t('asset.expenses') %></h1>
+  <h3><%= t('asset.expenses_list') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -17,12 +17,12 @@
   <% end %>
     <% form_for :report, :url => {:action => 'expense_list_update'} do |form| %>
       <div class="label-field-pair">
-        <label>Select start date:</label>
-        <div class="input-container"><%= calendar_date_select_tag 'start_date', Date.today %></div>
+        <label><%= t('finance.monthly_report.select_start_date') %>:</label>
+        <div class="input-container"><%= calendar_date_select_tag 'start_date', I18n.localize(Date.today, :format=>:default) %></div>
       </div>
       <div class="label-field-pair">
-        <label>Select End date: </label>
-        <div class="input-container"><%= calendar_date_select_tag 'end_date', Date.today %></div>
+        <label><%= t('monthly_report.select_end_date') %>: </label>
+        <div class="input-container"><%= calendar_date_select_tag 'end_date', I18n.localize(Date.today, :format=>:default) %></div>
       </div>
 
       <%=  submit_tag "► OK",:class=>'submit_button' %>
