--- a/app/views/finance/expense_list_update.erb
+++ b/app/views/finance/expense_list_update.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
   <img src="/images/show_finance.png" alt="" />
-  <h1>Expenses</h1>
-  <h3>Expenses List</h3>
+  <h1><%= t('asset.expenses') %></h1>
+  <h3><%= t('asset.expenses_list') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -12,10 +12,10 @@
     <br />
     <table id="listing">
       <tr class="tr-head">
-        <td>Name</td>
-        <td>Description</td>
-        <td>Amount</td>
-        <td>Transaction Date</td>
+        <td><%= t('layouts.default.name') %></td>
+        <td><%= t('index.description') %></td>
+        <td><%= t('layouts.default.amount') %></td>
+        <td><%= t('donations.transaction_date') %></td>
         <td></td>
       </tr>
       <% @expenses.each do |d| %>
@@ -24,14 +24,14 @@
           <td class="col-3"><%= d.description %></td>
           <td class="col-3"><%= d.amount %></td>
           <td class="col-3"><%= d.transaction_date.strftime("%d-%m-%y") unless d.transaction_date.nil?%></td>
-          <td class="col-3"><small><%= link_to "Edit",{:action=>'expense_edit',:id=>d.id},:class=>'edit_link' %></small> | <small><%= link_to "Delete",:action=>'delete_transaction',:id=>d.id %></small></td>
+          <td class="col-3"><small><%= link_to "#{t('layouts.default.edit')}",{:action=>'expense_edit',:id=>d.id},:class=>'edit_link' %></small> | <small><%= link_to "Delete",:action=>'delete_transaction',:id=>d.id %></small></td>
         </tr>
       <% end %>
 
     </table>
   <% else %>
     <br />
-    No Transactions for the given period.
+    <%= t('index.msg1') %>
   <% end %>
 
 </div>
