--- a/app/views/finance/fee_collection.html.erb
+++ b/app/views/finance/fee_collection.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
     <img src="/images/show_finance.png" alt="" />
-  <h1>Finance</h1>
-  <h3>Fee collection dates</h3>
+    <h1><%= t('index.finance') %></h1>
+    <h3><%= t('index.fees_collection_date') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -10,14 +10,14 @@
   <div class="box">
   <div id ="message"></div>
   <div class ="link-box">
-    <div class="link-heading"> 
-      <%= link_to_remote 'Create Fee Collection', :url => { :action => 'fee_collection_new'} %>
+    <div class="link-heading">
+      <%= link_to_remote "#{t('index.create_fee_collection')}", :url => { :action => 'fee_collection_new'} %>
     </div>
-    <div class="link-descr">Creates new fee collecting dates </div>
+    <div class="link-descr"><%= t('creates_new_fee_collecting_dates') %> </div>
   </div>
   <div class="link-box">
-    <div class="link-heading"><%= link_to "View",:action => "fee_collection_view" %></div>
-    <div class="link-descr">Displays fee collection dates</div>
+    <div class="link-heading"><%= link_to "#{t('timetable.index.view')}",:action => "fee_collection_view" %></div>
+    <div class="link-descr"><%= t('displays_collection_dates') %></div>
   </div>
 
   <div id="modal-box" style="display:none;"></div>
