--- a/app/views/finance/fees_create.html.erb
+++ b/app/views/finance/fees_create.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
   <img src="/images/show_finance.png" alt="" />
-  <h1>Fees Create</h1>
-  <h3>Master Fees and Additional Fees</h3>
+  <h1><%= t('index.create_fees') %></h1>
+  <h3><%= t('fees_index.creates_master_fees_and_additional_fees') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -12,15 +12,15 @@
     <div class="box">
 
   <div class="link-box">
-    <div class="link-heading"><%= link_to "Master Fees", :action => "master_fees" %></div>
-    <div class="link-descr">Creates Master Fees</div>
+    <div class="link-heading"><%= link_to "#{t('fees_index.master_fees')}", :action => "master_fees" %></div>
+    <div class="link-descr"><%= t('fees_index.create_master_fees') %></div>
   </div>
 
   <div class="link-box">
-    <div class="link-heading"><%= link_to "Additional Fees", :action => "additional_fees" %></div>
-    <div class="link-descr">Creates Additional Fees</div>
+    <div class="link-heading"><%= link_to "#{t('additional_fees.additional_fees')}", :action => "additional_fees" %></div>
+    <div class="link-descr"><%= t('additional_fees.create_additional_fees') %></div>
   </div>
-  
-  
+
+
 </div>
 </div>
