--- a/app/views/finance/fees_defaulters.html.erb
+++ b/app/views/finance/fees_defaulters.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
    <img src="/images/show_finance.png" alt="" />
-  <h1>Fees Defaulters</h1>
-  <h3>Students with fee dues </h3>
+   <h1><%= t('fees_defaulters') %></h1>
+   <h3><%= t('students_fee_dues') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -11,13 +11,13 @@
   <% form_for :fees_defaulters do %>
     <div id="batchs1">
       <div class="label-field-pair">
-        <label>Select a batch: </label>
+        <label><%= t('fee_collection_view.select_batch') %>: </label>
       <div class="text-input-bg"> <%= select :fees_defaulters, :batch_id, @batchs.map { |c| [c.full_name, c.id] },
-          {:prompt => "Select a batch"},
+          {:prompt => "#{t('fee_collection_view.select_batch')}"},
           {:onChange => "#{remote_function(:url => {:action => "update_fees_collection_dates_defaulters"}, :with => "'batch_id='+value")}"}%> </div>
     </div>
 <div class="label-field-pair">
-        <label>Select fee collection date: </label>
+  <label><%= t('fees_submission_batch.select_fee_col_date') %>: </label>
     <div class="text-input-bg"> <div id="fees_collection_dates"> <%= render :partial => "fees_collection_dates_defaulters"  %> </div> </div>
 </div>
   <% end %>
