--- a/app/views/finance/fees_received.html.erb
+++ b/app/views/finance/fees_received.html.erb
@@ -1,7 +1,7 @@
 
-<h2>Fee submission</h2>
+<h2><%= t('fees_submission_index.fees_submission') %></h2>
 
-<p><%= link_to "Finance", :action => "index" %></p>
+<p><%= link_to "#{t('index.finance')}", :action => "index" %></p>
 
 <% @fee_components.each do |c| %>
   <%= c.fee_element.label %> - <%= c.fee_element.amount %> <br/>
