--- a/app/views/finance/fees_report_year.html.erb
+++ b/app/views/finance/fees_report_year.html.erb
@@ -1,7 +1,7 @@
 <div id="content-header">
   <img src="/images/admission/admission_page_logo.jpg" />
-  <h1>Finance Academic Year Report</h1>
-  <h3>Fees Report</h3>
+  <h1><%= t('asset.finance_academic_year_report') %></h1>
+  <h3><%= t('year_report.fees_report') %></h3>
   <div id="app-back-button">
     <%= link_to image_tag("/images/buttons/back.png", :border => 0),:back %>
   </div>
@@ -13,8 +13,8 @@
 
   <div id="fees-table">
     <div class="fees-th">
-      <div class="fees-table-description">Description</div>
-      <div class="fees-table-expenses">Amount</div>
+      <div class="fees-table-description"><%= t('index.description') %></div>
+      <div class="fees-table-expenses"><%= t('layouts.default.amount') %></div>
     </div>
 
     <% @batchs.each do |c| %>
@@ -39,7 +39,7 @@
     <%end%>
     <br/>
      <div class="fees-th">
-      <div class="fees-table-description">Total Fees </div>
+       <div class="fees-table-description"><%= t('fees_submission_index.total_fees') %> </div>
       <div class="fees-table-expenses"><%= total %></div>
     </div>
 
