--- a/app/views/finance/fees_student_dates.html.erb
+++ b/app/views/finance/fees_student_dates.html.erb
@@ -1,6 +1,6 @@
 <div id="content-header">
     <img src="/images/show_finance.png" alt="" />
-  <h1>Fees Submission</h1>
+    <h1><%= t('fees_submission_index.fees_submission') %></h1>
   <h3><%= @student.full_name%></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
@@ -9,10 +9,10 @@
 
 <div id="page-yield">
   <div class="label-field-pair">
-    <label>Select a Fee Collection date</label>
+    <label><%= t('select_fee_collection') %></label>
   <div class="text-input-bg">
     <%= select  :fees_submission, :dates_id, @dates.map { |e| [e.full_name, e.id]},
-      {:prompt => "Select fees collection date"},
+      {:prompt => "#{t('select_fee_collection')}"},
       {:onChange => "#{remote_function( :url =>
       {:action => "fees_submission_student"},
       :with => "'date='+value+'&id='+#{@student.id}") }"} %>
