--- a/app/views/finance/fees_student_search.html.erb
+++ b/app/views/finance/fees_student_search.html.erb
@@ -1,21 +1,21 @@
 
 <div id="content-header">
     <img src="/images/show_finance.png" alt="" />
-  <h1>Finance</h1>
-  <h3>Fees Submission</h3>
+    <h1><%= t('layouts.application.top_nav_finance') %></h1>
+    <h3><%= t('fees_submission_index.fees_submission') %></h3>
   <div id="app-back-button">
    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
 <div id="page-yield">
-  
+
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
 
   <div id="search_box_bg">
       <form name="search_form" action="" style="display:inline;">
         <label for="user_name">
-          Search
+          <%= t('layouts.default.search') %>
           <%= image_tag("loader.gif",
               :align => "absmiddle",
               :border => 0,
