--- a/app/views/finance/fees_student_specific_dates.html.erb
+++ b/app/views/finance/fees_student_specific_dates.html.erb
@@ -1,6 +1,6 @@
 <div id="content-header">
       <img src="/images/show_finance.png" alt="" />
-  <h1>Special Fees for student</h1>
+      <h1><%= t('index.special_fees_for_student') %></h1>
   <h3><%= @student.full_name%></h3>
   <div id="app-back-button">
   <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
@@ -11,7 +11,7 @@
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div class="text-input-bg">
     <%= select  :fees_submission, :dates_id, @dates.map { |e| [e.name+" : "+e.start_date.to_s, e.id]},
-      {:prompt => "Select fees collection date"},
+      {:prompt => "#{t('index.select_fees_collection_date')}"},
       {:onChange => "#{remote_function( :url =>
       {:action => "update_fees_specific"},
       :with => "'date='+value+'&id='+#{@student.id}") }"} %>
